--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+# Python
+__pycache__/
+*.py[cod]
+*.egg-info/
+dist/
+build/
+
+# Virtual Environment
+.venv/
 .env
-.venv
+
+# IDE
+.vscode/
+.idea/
